--- a/src/TidyWindow.App/Views/EssentialsPage.xaml
+++ b/src/TidyWindow.App/Views/EssentialsPage.xaml
@@ -608,38 +608,28 @@
                                                     </WrapPanel>
                                                 </StackPanel>
                                                 <StackPanel Margin="0,10,0,0"
-                                                            Visibility="{Binding IsSpoolerTask, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                                    <TextBlock Text="Repair scope"
+                                                            Visibility="{Binding HasOptions, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                    <TextBlock Text="Additional options"
                                                                FontSize="12"
                                                                Foreground="#94A3B8"
                                                                Margin="0,0,0,6"/>
-                                                    <WrapPanel>
-                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
-                                                                  Content="Stop &amp; restart services"
-                                                                  IsChecked="{Binding IncludeServiceReset}"
-                                                                  Foreground="#E2E8F0"
-                                                                  Margin="0,0,12,6"/>
-                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
-                                                                  Content="Clear spool queue"
-                                                                  IsChecked="{Binding IncludeQueuePurge}"
-                                                                  Foreground="#E2E8F0"
-                                                                  Margin="0,0,12,6"/>
-                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
-                                                                  Content="Remove stale drivers"
-                                                                  IsChecked="{Binding IncludeDriverCleanup}"
-                                                                  Foreground="#E2E8F0"
-                                                                  Margin="0,0,12,6"/>
-                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
-                                                                  Content="Re-register DLLs"
-                                                                  IsChecked="{Binding IncludeDllRegistration}"
-                                                                  Foreground="#E2E8F0"
-                                                                  Margin="0,0,12,6"/>
-                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
-                                                                  Content="Reset isolation policies"
-                                                                  IsChecked="{Binding IncludeIsolationPolicyReset}"
-                                                                  Foreground="#E2E8F0"
-                                                                  Margin="0,0,12,6"/>
-                                                    </WrapPanel>
+                                                    <ItemsControl ItemsSource="{Binding Options}">
+                                                        <ItemsControl.ItemsPanel>
+                                                            <ItemsPanelTemplate>
+                                                                <WrapPanel/>
+                                                            </ItemsPanelTemplate>
+                                                        </ItemsControl.ItemsPanel>
+                                                        <ItemsControl.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                          Content="{Binding Label}"
+                                                                          IsChecked="{Binding IsEnabled, Mode=TwoWay}"
+                                                                          Foreground="#E2E8F0"
+                                                                          ToolTip="{Binding Description}"
+                                                                          Margin="0,0,12,6"/>
+                                                            </DataTemplate>
+                                                        </ItemsControl.ItemTemplate>
+                                                    </ItemsControl>
                                                 </StackPanel>
                                                 <TextBlock Text="{Binding LastStatus}"
                                                            Margin="0,8,0,0"
